# roundabout-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt  validate.py  validation_results.csv
.github/workflow/: ci.yml
src/traffic_sim/: __init__.py  __main__.py  cli.py  config.py  core.py  geometry.py  intersections.py  sim.py
tests/: conftest.py  test_core.py  test_dummy.py  test_geometry.py  test_intersections.py  test_sim.py
